Fix report export errors and redesign inventory UI to professional standards

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,32 +1,41 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
-    <title>TechyPOS | Premium Technical Operations & Inventory Suite</title>
-    <meta name="description" content="A state-of-the-art POS and inventory management system designed for technical operations, repair shops, and electronic component retailers." />
-    <meta name="keywords" content="POS, inventory management, repair shop software, technical operations, component tracking, TechyPOS" />
-    
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="TechyPOS | Premium Technical Operations Suite" />
-    <meta property="og:description" content="The ultimate command center for modern technical operations and inventory tracking." />
-    <meta property="og:image" content="/og-image.png" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="TechyPOS | Premium Technical Operations Suite" />
-    <meta property="twitter:description" content="The ultimate command center for modern technical operations and inventory tracking." />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <title>TechyPOS | Premium Technical Operations & Inventory Suite</title>
+  <meta name="description"
+    content="A state-of-the-art POS and inventory management system designed for technical operations, repair shops, and electronic component retailers." />
+  <meta name="keywords"
+    content="POS, inventory management, repair shop software, technical operations, component tracking, TechyPOS" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="TechyPOS | Premium Technical Operations Suite" />
+  <meta property="og:description"
+    content="The ultimate command center for modern technical operations and inventory tracking." />
+  <meta property="og:image" content="/og-image.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:title" content="TechyPOS | Premium Technical Operations Suite" />
+  <meta property="twitter:description"
+    content="The ultimate command center for modern technical operations and inventory tracking." />
+
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=JetBrains+Mono:wght@400;700&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
